--- a/forStudy/practice-tailwind/package.json
+++ b/forStudy/practice-tailwind/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
+    "clsx": "^2.1.1",
     "next": "15.3.3",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
